# pico-sdk-dockerized

./: Dockerfile  LICENSE  README.md
template/: CMakeLists.txt
